--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="line-dec"></div>
             <h4>"دائما متميزون"</h4>
             <p>شركة ليفا للآلات والمعدات هي شركة سعودية رائدة ومتخصصة في استيراد وتشغيل مكائن البيع الذاتي. تتمتع الشركة بخبرة قوية وتعتمد على كادر محترف من الخبراء ذوي الخبرة والمهارة العالية في تشغيل مكائن البيع الذاتي. بفضل هذه الخبرة والفريق القوي، نجحت شركة الثقة للآلات والمعدات في ترك بصمة قوية وبناء هوية فريدة لنفسها، مما جعلها واحدة من أفضل الشركات المتخصصة في تشغيل مكائن البيع الذاتي في المملكة العربية السعودية. وقد صنعت الشركة آلافًا من قصص النجاح في هذا المجال </p>
-            <div class="main-button scroll-to-section"><a href="#">طلب مكائن</a></div>
+            <div class="main-button scroll-to-section"><a href="/order.html">طلب مكائن</a></div>
             <span>or</span>
             <div class="second-button"><a href="#">تحميل البروفايل</a></div>
           </div>
