--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="robots" content="noindex, nofollow">
+    <meta property="og:title" content="LYFE for machines" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="شركة لفات التجارة لبيع المكائن الذكية " />
+    <meta name="description" content="شركة لفات التجارة لبيع المكائن الذكية ">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet">
     <title>LYFE</title>
@@ -40,19 +45,19 @@
           <div class="col-12">
             <nav class="main-nav">
               <!-- ***** Logo Start ***** -->
-              <a href="index.html" class="logo">
-                <img src="/images/removed/logo.png" alt="" style="max-width: 112px;">
+              <a href="index.html" class="logo" rel="nofollow">
+                <img src="/images/removed/logo.png" alt="machien image" style="max-width: 112px;">
               </a>
               <!-- ***** Logo End ***** -->
               <!-- ***** Menu Start ***** -->
               <ul class="nav">
-                <li class="scroll-to-section"><a href="#top" class="active">الرئيسية</a></li>
-                <li class="scroll-to-section"><a href="#services">خدمتنا</a></li>
-                <li class="scroll-to-section"><a href="/order.html">المكائن</a></li>
-                <li class="scroll-to-section"><a href="#infos">من نحن</a></li>
-                <li class="scroll-to-section"><a href="#contact">تواصل</a></li>
+                <li class="scroll-to-section"><a href="#top" class="active" rel="nofollow">الرئيسية</a></li>
+                <li class="scroll-to-section"><a href="#services" rel="nofollow">خدمتنا</a></li>
+                <li class="scroll-to-section"><a href="/order.html" rel="nofollow">المكائن</a></li>
+                <li class="scroll-to-section"><a href="#infos" rel="nofollow">من نحن</a></li>
+                <li class="scroll-to-section"><a href="#contact" rel="nofollow">تواصل</a></li>
               </ul>
-              <a class='menu-trigger'>
+              <a class='menu-trigger' rel="nofollow">
                 <span>Menu</span>
               </a>
               <!-- ***** Menu End ***** -->
@@ -76,9 +81,9 @@
                 الذاتي. بفضل هذه الخبرة والفريق القوي، نجحت شركة لفات التجارية لمكائن البيع الذات في ترك بصمة قوية وبناء
                 هوية فريدة لنفسها، مما جعلها واحدة من أفضل الشركات المتخصصة في تشغيل مكائن البيع الذاتي في المملكة
                 العربية السعودية. وقد صنعت الشركة آلافًا من قصص النجاح في هذا المجال </p>
-              <div class="main-button scroll-to-section"><a href="/order.html">طلب مكائن</a></div>
+              <div class="main-button scroll-to-section"><a href="/order.html" rel="nofollow">طلب مكائن</a></div>
               <span>أو</span>
-              <div class="second-button"><a href="#">تحميل البروفايل</a></div>
+              <div class="second-button"><a href="#" rel="nofollow">تحميل البروفايل</a></div>
             </div>
           </div>
         </div>
@@ -185,7 +190,7 @@
               <div class="row">
                 <div class="col-lg-6">
                   <div class="left-image">
-                    <img src="/images/removed/Screenshot_2023-05-21_152348-removebg-preview.png" alt="">
+                    <img src="/images/removed/Screenshot_2023-05-21_152348-removebg-preview.png" alt="machine">
                   </div>
                 </div>
                 <div class="col-lg-6">
@@ -226,43 +231,31 @@
         <div class="about-content">
           <div class="about1">
             <div class="ab">
-              <img src="/images/services/توريد.png" alt="">
+              <img src="/images/services/توريد.png" alt="services image">
               <div class="overlay">
                 <p>نقوم بأنفسنا من خلال الخبراء لدينا بالتركيب والتجهيز والتشغيل</p>
               </div>
             </div>
             <div class="ab">
-              <img src="/images/services/صيانة.png" alt="">
+              <img src="/images/services/صيانة.png" alt="services image">
               <div class="overlay">
                 <p>لدينا خبراء متخصصون في صيانة آلات البيع الذاتي، لذا أنت بأمان معنا</p>
               </div>
             </div>
-            <!-- <div class="ab">
-                  <img src="/images/services/تركيب.png" alt="">
-                    <div class="overlay">
-                    <p>نقوم بتوفير قطع الغيار الأصلية لآلات البيع الذاتي</p>
-                    </div>
-                </div> -->
           </div>
           <div class="about2">
             <img src="/images/removed/hero__2_-removebg-preview.png" style="width: 400px;" alt="machine">
           </div>
           <div class="about3">
-            <!-- <div class="ab">
-                  <img src="/images/services/قطع.png" alt="">
-                    <div class="overlay">
-                    <p>قدم ضمان لمدة سنتين على جميع المكائن (لايشمل القطع الاستهلاكية)</p>
-                    </div>
-                </div> -->
             <div class="ab">
-              <img src="/images/services/تدريب.png" alt="">
+              <img src="/images/services/تدريب.png" alt="services image">
               <div class="overlay">
                 <p>حتى إذا كنت لا تمتلك خبرة في تشغيل مكائن البيع، نقوم بتدريبك وتدريب طاقم الموظفين لديك على استخدامه
                 </p>
               </div>
             </div>
             <div class="ab">
-              <img src="/images/services/تشغيل.png" alt="">
+              <img src="/images/services/تشغيل.png" alt="services image">
               <div class="overlay">
                 <p>نقوم بتوصيل آلات البيع إلى موقعك وبشكل مجاني</p>
               </div>
@@ -329,20 +322,20 @@
                       <div class="col-lg-4">
                         <div class="info-item">
                           <i class="fa fa-phone"></i>
-                          <h4><a href="#">010-020-0340</a></h4>
+                          <h4><a href="#" rel="nofollow">010-020-0340</a></h4>
                         </div>
                       </div>
                       <div class="col-lg-4">
                         <div class="info-item">
                           <i class="fa fa-envelope"></i>
-                          <h4><a href="#">info@company.com</a></h4>
-                          <h4><a href="#">hello@company.com</a></h4>
+                          <h4><a href="#" rel="nofollow">info@company.com</a></h4>
+                          <h4><a href="#" rel="nofollow">hello@company.com</a></h4>
                         </div>
                       </div>
                       <div class="col-lg-4">
                         <div class="info-item">
                           <i class="fa fa-map-marker"></i>
-                          <h4><a href="#">السعودية</a></h4>
+                          <h4><a href="#" rel="nofollow">السعودية</a></h4>
                         </div>
                       </div>
                     </div>
@@ -358,7 +351,7 @@
     <footer>
       <div class="container">
         <div class="col-lg-12">
-          <p>Copyright © 2036 <a href="#">LYFE</a>. All rights reserved.
+          <p>Copyright © 2036 <a href="#" rel="nofollow">LYFE</a>. All rights reserved.
           </p>
         </div>
       </div>
