--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <!-- ***** Menu Start ***** -->
               <ul class="nav">
                 <li class="scroll-to-section"><a href="#top" class="active" rel="nofollow">الرئيسية</a></li>
-                <li class="scroll-to-section"><a href="#services" rel="nofollow">خدمتنا</a></li>
+                <li class="scroll-to-section"><a href="#about" rel="nofollow">خدمتنا</a></li>
                 <li class="scroll-to-section"><a href="/order.html" rel="nofollow">المكائن</a></li>
                 <li class="scroll-to-section"><a href="#infos" rel="nofollow">من نحن</a></li>
                 <li class="scroll-to-section"><a href="#contact" rel="nofollow">تواصل</a></li>
@@ -93,25 +93,25 @@
     <div class="services section" id="services">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6 offset-lg-6">
+          <div class="col-lg-20 offset-lg-20">
             <div class="row">
-              <div class="col-lg-12">
+              <div class="col-lg-20">
                 <div class="section-heading">
-                  <h2>نحن نهتم بالمعاير ،لنكون الافضل</h2>
+                  <h2>نحن نهتم بالمعاير ،  لنكون الافضل</h2>
                   <div class="line-dec"></div>
                 </div>
               </div>
-              <div class="col-lg-6 col-sm-6">
+              <div class="col-lg-4 col-sm-4">
                 <div class="service-item">
                   <div class="icon">
                     <img src="assets/images/services-01.jpg" alt="discover SEO" class="templatemo-feature">
                   </div>
-                  <h4>الرسالة</h4> شركة لفات التجارية لمكائن البيع الذاتي
+                  <h4>الرسالة</h4>
                   <p>نحن ملتزمون بالمسؤولية في لاختيار أفضل التصميمات التي تناسب جميع الأذواق، بهدف مساعدة العلامات
                     التجارية على الانتشار الواسع بطريقة عصرية وجمالية.</p>
                 </div>
               </div>
-              <div class="col-lg-6 col-sm-6">
+              <div class="col-lg-4 col-sm-4">
                 <div class="service-item">
                   <div class="icon">
                     <img src="assets/images/services-02.jpg" alt="data analysis" class="templatemo-feature">
@@ -122,7 +122,7 @@
                     المملكة العربية السعودية.</p>
                 </div>
               </div>
-              <div class="col-lg-6 col-sm-6">
+              <div class="col-lg-4 col-sm-4">
                 <div class="service-item">
                   <div class="icon">
                     <img src="assets/images/services-03.jpg" alt="precise data" class="templatemo-feature">
@@ -207,7 +207,7 @@
                     </div>
                     <div class="skill-slide digital">
                       <div class="fill"></div>
-                      <h6>الصيانة</h6>
+                      <h6>التشغيل</h6>
                       <span>100%</span>
                     </div>
                     <div class="skill-slide media">
@@ -223,7 +223,7 @@
         </div>
       </div>
     </div>
-    <div class="about">
+    <div class="about" id="about">
       <div class="container">
         <div class="about_head">
           <h2>لماذا تختارنا؟</h2>
@@ -250,12 +250,11 @@
             <div class="ab">
               <img src="/images/services/تدريب.png" alt="services image">
               <div class="overlay">
-                <p>حتى إذا كنت لا تمتلك خبرة في تشغيل مكائن البيع، نقوم بتدريبك وتدريب طاقم الموظفين لديك على استخدامه
-                </p>
+                <p>نوفر مكائن بيع ذاتي متنوعة مأكولات ومشروبات في موقعكم لخدمة موظفينكم وعملائكم </p>
               </div>
             </div>
             <div class="ab">
-              <img src="/images/services/تشغيل.png" alt="services image">
+              <img src="/images/services/توصيل.png" alt="services image">
               <div class="overlay">
                 <p>نقوم بتوصيل آلات البيع إلى موقعك وبشكل مجاني</p>
               </div>
@@ -322,20 +321,19 @@
                       <div class="col-lg-4">
                         <div class="info-item">
                           <i class="fa fa-phone"></i>
-                          <h4><a href="#" rel="nofollow">010-020-0340</a></h4>
+                          <h4><a href="#" rel="nofollow">0555116686</a></h4>
                         </div>
                       </div>
                       <div class="col-lg-4">
                         <div class="info-item">
                           <i class="fa fa-envelope"></i>
-                          <h4><a href="#" rel="nofollow">info@company.com</a></h4>
-                          <h4><a href="#" rel="nofollow">hello@company.com</a></h4>
-                        </div>
+                          <h4><a href="#" rel="nofollow">LAFATCO2023@GMAIL.COM</a></h4>
+                          </div>
                       </div>
                       <div class="col-lg-4">
                         <div class="info-item">
                           <i class="fa fa-map-marker"></i>
-                          <h4><a href="#" rel="nofollow">السعودية</a></h4>
+                          <h4><a href="#" rel="nofollow">WWW.LYFETRADE.COM</a></h4>
                         </div>
                       </div>
                     </div>
