--- a/order.html
+++ b/order.html
@@ -69,7 +69,7 @@
 <div class="order">
     <div class="container">
             <form action="">
-                <input id="head" type="text" placeholder="اطلب مكينة الان" readonly>
+                <input id="head" type="text" placeholder="اطلب ماكينة الان" readonly>
             <input type="text" name="username" id="" placeholder="الاسم">
             <input type="text" name="numberphone" placeholder="رقم الجوال">
             <input type="email" name="email" placeholder="البريد الالكترونى">
