--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
-<!--  -->
+
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -83,7 +83,7 @@
                 العربية السعودية. وقد صنعت الشركة آلافًا من قصص النجاح في هذا المجال </p>
               <div class="main-button scroll-to-section"><a href="/order.html" rel="nofollow">طلب مكائن</a></div>
               <span>أو</span>
-              <div class="second-button"><a href="#" rel="nofollow">تحميل البروفايل</a></div>
+              <div class="second-button"><a href="/profile.pdf" rel="nofollow" target="_blank">تحميل البروفايل</a></div>
             </div>
           </div>
         </div>
